fix: Add compact type, fix spacing in contact panel

--- a/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_buttons.scss
@@ -38,6 +38,10 @@
   &.round {
     border-radius: $space-larger;
   }
+
+  &.compact {
+    padding: 0;
+  }
 }
 
 .button--fixed-right-top {
